# NRPSDesigner

./: .gitignore  DatabaseCuration.xls  GUI_NRPS_designer.php  MSA.js  MSA_test.html  insert_to_domain_types_a_c.php  insert_to_main  insert_to_main.php~Stashed changes  insert_to_origin.php  insert_to_substrates.php  nrps_designer(1).sql  nrps_designer.sql  nrps_designer_multipledomaintables.sql  nrps_library.sql  nrpsdesigner  php_config.php  readme.md
Analysis scripts/: pfam.py
DatabaseCuration/: A40926.uprj  DatabaseCuration.xls  MyDocument.gb  a40926.gb  a40926Cluste...A.cluster001.gbk  a40926Cluster_DNA.fa  a40926_12_AA.fa  a40926_3_AA.fa  a40926_456_AA.fa  a40926_7_AA.fa  a40926_TE_AA.fa  a47934.gb  a47934.uprj  a47934A_AA.fa  a47934B_AA.fa  a47934C_AA.fa  a47934Cluste...A.cluster001.gbk  a47934Cluster_DNA.fa  a47934D_AA.fa  acm.gb  acm.uprj  acmA_AA.fa  acmA_coding_DNA.fa  acmB_AA.fa  acmC_AA.fa  acmCluster_DNA.cluster001.gbk  acmCluster_DNA.fa  acv.gb  acv.uprj  acv_AA.fa  acv_DNA.cluster001.gbk  acv_DNA.fa  anaba.gb  anaba.uprj  anabaCluster_DNA.cluster001.gbk  anabaCluster_DNA.fa  angui.gb  angui.uprj  angui1_AA.fa  angui2_AA.fa  (+220 more)
Django/DjangoNrps/: cDomainChiralityToCType.py  fixSbspksBorders.py  manage.py  nrps_designer  nrps_designer.sql  twoTypesOfTdomains.py  urls.py
Django/DjangoNrps/DjangoNrps/: settings.py  urls.py  views.py  wsgi.py
Django/DjangoNrps/DjangoNrps/templatetags/: userhandling.py
Django/DjangoNrps/celeryHelper/: helpers.py  urls.py  views.py
Django/DjangoNrps/databaseInput/: admin.py  ajax.py  api.py  forms.py  models.py  urls.py  validators.py  views.py
Django/DjangoNrps/databaseInput/MSA/: MSA.py
Django/DjangoNrps/databaseInput/migrations/: 0001_initial.py  0002_auto__add_field_substrate_user__add_field_origin_user__add_field_cds_u.py  0003_auto__add_field_type_pfamGraphic.py  0004_auto__add_field_substrate_smashName__add_field_type_smashName__chg_fie.py  0005_auto__add_experiment__add_domaintuple.py  0006_rename_field_domaintuple_domain_right__del_field_domaintuple_positi.py  0007_linkers.py  0008_borders.py
Django/DjangoNrps/databaseInput/nrpsSMASH/: analyzeNrpCds.py  hmm_infile.fasta  hmmscanparser.py  infile.fasta  input.sig  muscle.fasta  nrpspksdomains.hmm  nrpspksdomains.hmm.h3f  nrpspksdomains.hmm.h3i  nrpspksdomains.hmm.h3m  nrpspksdomains.hmm.h3p  nrpsseqs.fasta  substrates.py  substrates_nrps.py  tycA.gb  utils.py
Django/DjangoNrps/databaseInput/sql/: origin.sql
Django/DjangoNrps/designerGui/: #views.py#  admin.py  ajax.py  api.py  forms.py  models.py  urls.py  views.py
Django/DjangoNrps/designerGui/OpenBabel/: combineaa2.py  combineaa3.py
Django/DjangoNrps/designerGui/migrations/: 0001_initial.py  0002_auto__chg_field_nrp_construct__add_field_domainorder_gene.py  0003_auto__add_field_nrp_indigoidineTagged__chg_field_nrp_construct__del_fi.py  0004_auto__del_field_domainorder_designerStop__del_field_domainorder_design.py  0005_auto__chg_field_domainorder_linkerAfterLength__chg_field_domainorder_l.py  0006_auto__add_field_nrp_parent.py  0007_auto__add_field_nrp_uuid.py  0008_generate_uuids.py  0009_auto__del_field_domainorder_linkerAfterLength__del_field_domainorder_l.py  0010_auto__chg_field_nrp_construct__add_unique_nrp_construct.py  0011_auto__add_field_nrp_boundary_parent.py  0012_auto__add_field_domainorder_left_boundary__add_field_domainorder_right.py  0013_get_default_boundaries.py  0014_auto__chg_field_domainorder_right_boundary__chg_field_domainorder_left.py  0015_auto__add_field_nrp_curatedonly.py  0016_auto__chg_field_nrp_name.py
Django/DjangoNrps/documentation/: urls.py  views.py
Django/DjangoNrps/fragment/: api.py  forms.py  importfragment.py  models.py  partsregistry.py  urls.py  views.py
Django/DjangoNrps/fragment/migrations/: 0002_auto__add_field_gene_viewable.py  0003_auto__chg_field_gene_owner.py  0004_auto__add_domaingene.py
Django/DjangoNrps/gibson/: api.py  designer.py  forms.py  jsonresponses.py  models.py  unafold.py  urls.py  views.py
Django/DjangoNrps/gibson/migrations/: 0004_delete_constructs_without_nrp.py  0005_auto__add_field_constructfragment_buffer_v__add_field_constructfragmen.py  0006_auto__chg_field_constructfragment_buffer_v__chg_field_constructfragmen.py  0008_auto__chg_field_primer_name.py
Django/DjangoNrps/scripts/: getNumberOfCombinations.py
Django/DjangoNrps/templates/: base.html  home.html
NRPS library/: CMakeLists.txt
NRPS library/cmake/: FindLibGCrypt.cmake  FindLibGPGError.cmake  FindLibIDN.cmake  FindLibLDAP.cmake  FindLibRTMP.cmake  FindLibSSH2.cmake  FindLibdl.cmake  FindLibtasn1.cmake  FindMySQLcpp.cmake  FindP11Kit.cmake  FindSBOL.cmake
NRPS library/lib/: CMakeLists.txt
NRPS library/lib/nrpsdesigner/: CMakeLists.txt  abstractdatabaseconnector.cpp  abstractdatabaseconnector.h  abstractdomaintype.cpp  abstractdomaintype.h  cds.cpp  cds.h  config.h.in  domain.cpp  domain.h  exceptions.h  generalpathway.cpp  generalpathway.h  global_enums.cpp  global_enums.h  globals_internal.cpp  globals_internal.h  monomer.cpp  monomer.h  mysqldatabaseconnector.cpp  mysqldatabaseconnector.h  networkoptions.cpp  networkoptions.h  nrp.cpp  nrp.h  nrps.cpp  nrps.h  nrpsbuilder.cpp  nrpsbuilder.h  nrpslibrary.cpp  nrpslibrary.h  origin.cpp  origin.h  pathway.cpp  pathway.h  product.cpp  product.h  taxon.cpp  taxon.h  taxonbuilder.cpp  (+1 more)
NRPS library/lib/nrpsdesigner/domains/: domaintypea.cpp  domaintypea.h  domaintypeac.cpp  domaintypeac.h  domaintypeaoxa.cpp  domaintypeaoxa.h  domaintypec.cpp  domaintypec.h  domaintypee.cpp  domaintypee.h  domaintypet.cpp  domaintypet.h  domaintypete.cpp  domaintypete.h
NRPS library/lib/nrpsdesigner/domaintypes/: domaintypea.cpp  domaintypea.h  domaintypeac.cpp  domaintypeac.h  domaintypee.cpp  domaintypee.h  domaintypet.cpp  domaintypet.h  domaintypete.cpp  domaintypete.h
NRPS library/ui/cli/: CMakeLists.txt  main.cpp  test.xml  test2.xml
homepage/: index.html
sbspks/: scrape.sh  scrapy.cfg  validate.py  validate.sh
sbspks/sbspks/: items.py  pipelines.py  settings.py
sbspks/sbspks/spiders/: sbspksspider.py
(+90 files in other folders)
